<resources>
    <string name="app_name" translatable="false">paraClick</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="email">Enter your email</string>
    <string name="pwd">Enter your password</string>
    <string name="click_to_register" translatable="false">Not a member? Register now.</string>
    <string name="click_to_login">click to login</string>
    <string name="box" translatable="false">Inbox</string>
    <string name="srv" translatable="false">Support</string>
    <string name="info">About us</string>
    <string name="col" translatable="false">collection</string>
    <string name="notif" translatable="false">Notification</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="others">Others</string>
    <string name="neww" translatable="false">Email</string>
    <string name="app" translatable="false">paraClick</string>
    <string name="name">Enter your name</string>
    <string name="member" translatable="false">You have already an account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ecran_av_ne" translatable="false">Ecran Avène</string>
    <string name="_50_dt" translatable="false">50 dt</string>
    <string name="search">Search</string>
    <string name="search_product">Search product</string>
    <string name="logout">logout</string>
    <string name="menu_logout">Log out</string>
    <string name="fpwd">Forget password ?</string>
    <string name="element_text">text</string>

    //tebe3 dark
    <string name="text">this is a text for test dark mode</string>
    <string name="slogan">The best services available for the best customers</string>
    <string name="login_admin">Login Admin</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="title_activity_page_accueil"> Home page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="map">Map</string>
    <string name="_1_100dt">1 100dt</string>
    <string name="category">Category</string>
    <string name="categoryy">Category</string>
    <string name="update_details">Update details</string>
    <string name="title">Title</string>
    <string name="update">update</string>
    <string name="color">Color</string>
    <string name="colorr">Color</string>
    <string name="brand">Brand</string>
    <string name="quantity">Quantity</string>
    <string name="price_tnd">Price (TND)</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product Price</string>
    <string name="product_color">Product Color</string>
    <string name="add_product">Add product</string>


</resources>