<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/notification"
        android:title="@string/notif"
        />
    <item
        android:id="@+id/menuCollection"
        android:icon="@drawable/collection"
        android:title="@string/col"
        />
    <item
        android:id="@+id/menuIndox"
        android:icon="@drawable/inbox"
        android:title="@string/box"
        />
    <item
        android:id="@+id/orders"
        android:icon="@drawable/choices"
        android:title="@string/srv"
        />
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/gear"
                android:title="@string/col"
                />
            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/service"
                android:title="@string/box"
                />
            <item
                android:id="@+id/about"
                android:icon="@drawable/info"
                android:title="@string/srv"
                />

    </menu></item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/menu_logout" />



</menu>