<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeMenu"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/menuProfilee"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"
            />


        <item
            android:id="@+id/locationMenu"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/map"
            />

        <item android:title="@string/others">
            <menu>
                <item
                    android:id="@+id/settingsMenu"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/action_settings"
                    />


            </menu></item>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>