<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView4"
            android:contentDescription="@string/update_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/update_details"
            android:background="@color/teal_200"
            android:gravity="center"
            android:textColor="#FFF"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title"
            tools:ignore="MissingConstraints"
            />
        <EditText
            android:id="@+id/editTextNumber8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/title" />

      <!--  <TextView
            android:id="@+id/imageUrl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="imageurl"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editTextNumber7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="e.g 8" />-->
        <TextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/description"
            tools:ignore="MissingConstraints"
            />
        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/description"/>
        <TextView
            android:id="@+id/price1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/price"
            tools:ignore="MissingConstraints"
            />
        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/price_tnd"/>
        <TextView
            android:id="@+id/quantity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/quantity"
            tools:ignore="MissingConstraints"
            />
        <EditText
            android:id="@+id/editTextNumber5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/quantity" />
        <TextView
            android:id="@+id/category1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/brand"
            tools:ignore="MissingConstraints"
            />

        <EditText
            android:id="@+id/editTextNumber6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/brand"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/colorr"
            tools:ignore="MissingConstraints"
            />
        <EditText
            android:id="@+id/editTextNumber4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/color" />
        <TextView
            android:id="@+id/brand1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/category"
            tools:ignore="MissingConstraints"
            />
        <EditText
            android:id="@+id/editTextNumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/categoryy" />
        <Button
            android:id="@id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/update"
            android:textSize="21dp"
            android:textAllCaps="false"

            android:gravity="center" />


    </LinearLayout>


</ScrollView>
