<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Products.AddProduct">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/upload_img_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/baseline_add_photo_alternate_24" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/product_name_et"
               android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/product_title"
                android:inputType="textPersonName"
                android:background="@xml/style"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@xml/style"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/product_category_Spinner"
                        android:hint="@string/category"
                        android:padding="15dp"
                        android:inputType="textCapSentences|textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@xml/style"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/brand"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:padding="15dp"
                        android:hint="@string/brand"
                        android:inputType="textCapSentences|textMultiLine"

                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@xml/style"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/product_number_Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:hint="@string/quantity"
                        android:background="@xml/style"
                        android:padding="15dp"
                        android:contextClickable="true"
                        android:inputType="number"
                                                />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/top_size_layout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@xml/style"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/product_size_Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/price_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:hint="@string/product_price"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal"
                android:background="@xml/style"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/color_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/product_color"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                android:background="@xml/style"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textSize="16sp"/>

                <EditText
                    android:id="@+id/description_tv"
                    android:hint="@string/description"
                    android:gravity="start|top"
                    android:minLines="1"
                    android:layout_marginTop="15dp"
                    android:background="@xml/style"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:inputType="textMultiLine"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@xml/btn_style"
                android:textSize="17dp"
                android:text="@string/add_product"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>