<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.LoginAdmin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="500dp"
                    android:layout_marginTop="-200dp"
                    app:srcCompat="@drawable/op"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="285dp"
                    android:layout_height="295dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="82dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo11" />
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="230dp"
                    android:fontFamily="@font/font"
                    android:gravity="center_horizontal"
                    android:text="paraClick"
                    android:textColor="#000"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageView" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@xml/style"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView" />

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@xml/style"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email" />




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_admin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_admin"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@xml/btn_style"
                    android:textSize="17dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pwd" />

                <TextView
                    android:id="@+id/pwdF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/fpwd"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_login_admin" />



            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>