<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.RegisterAdmin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="500dp"
                    android:layout_marginTop="-200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/op" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="285dp"
                    android:layout_height="295dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo11" />
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="230dp"
                    android:fontFamily="@font/font"
                    android:gravity="center_horizontal"
                    android:text="@string/app"
                    android:textColor="#000"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageView" />
                <EditText
                    android:id="@+id/Name"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|text"
                    android:hint="@string/name"
                    android:background="@xml/style"
                    app:layout_constraintTop_toBottomOf="@id/textView"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="40dp"/>
                <EditText
                    android:id="@+id/email"
                    android:hint= "enter your email"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@xml/style"
                    app:layout_constraintTop_toBottomOf="@id/Name"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>
                <EditText
                    android:id="@+id/pwd"
                    android:hint="@string/pwd"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:background="@xml/style"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>
                <EditText
                    android:id="@+id/Cpwd"
                    android:hint="Confirm your password"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:background="@xml/style"
                    app:layout_constraintTop_toBottomOf="@id/pwd"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/pwd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="100dp"/>
                <Button
                    android:id="@+id/btn_register"
                    android:text= "Register Admin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/Cpwd"
                    android:textSize="17dp"
                    android:background="@xml/btn_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>
                <TextView
                    android:id="@+id/loginNow"
                    android:text="@string/member"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_register"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>